--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+		.block{
+			display: block;
+		}
+	</style>
 </head>
 <body>	
-	<div><img src="黑色星期五集合页面1124_r1_c1.jpg" alt=""></div>
-	<div><img src="黑色星期五集合页面1124_r2_c1.jpg" alt=""></div>
-	<div><img src="黑色星期五集合页面1124_r7_c1.jpg" alt=""></div>
-	<div><img src="黑色星期五集合页面1124_r4_c1.jpg" alt=""></div>	
-	<div><img src="黑色星期五集合页面1124_r8_c1.jpg" alt=""></div>	
-	<div><img src="黑色星期五集合页面1124_r9_c1.jpg" alt=""></div>
-	<div><img src="黑色星期五集合页面1124.jpg" alt=""></div>
-	<div><img src="黑色星期五集合页面1124_r10_c1.jpg" alt=""></div>
-	<div><img src="黑色星期五集合页面1124_r5_c1.jpg" alt=""></div>
+	<div><img class="block" src="圣诞袜活动页面方案11_r1_c1.jpg" alt=""></div>
+	<div><img class="block" src="圣诞袜活动页面方案11_r2_c1.jpg" alt=""></div>
+	<div><img class="block" src="圣诞袜活动页面方案11_r4_c1.jpg" alt=""></div>
 </body>
 </html>
